* adapt tests to refactoring.